# nichirin

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  create_core.sh  data_partision.py  data_partision.sh  delete.py  install_solr.py  install_solr.sh  pyproject.toml  requirements.txt  setup.py
confs/: app.yaml
docs/: release-pypi.md
nichirin/: crawler.py  pipeline.py
nichirin/confs/: app.yaml
nichirin/data_pipeline/: generate_embeddings.py  split.py
nichirin/retriever/: solr.py  solr_index_docs.py
nichirin/scripts/: create_core.py  data_partision.py  data_partition.py  install_solr.py  seed_urls.py
nichirin/serve/: app.py
nichirin/serve/templates/: base.html  home.html
nichirin/utils/: data_utils.py
retriever/: solr_index_docs.py
retriver/: solr.py  solr_index_docs.py
search/: .history
search/data_pipeline/: generate_embeddings.py
search/retriever/: .history  solr.py  solr_index_docs.py
search/utils/: .history  data_utils.py  generate_embeddings.py  split.py
utils/: data_utils.py
