[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nichirin"
version = "0.0.1"
dependencies = [
    'torch>=2.0.1',
    'transformers>=4.21.0',
    'nltk>=3.8.1',
    'pyspark>=3.5.1'
]


description = """TODO"""
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
keywords = [
        "retrieval augmentation",
        "vector database",
        "natural language processing",
        "machine learning",
        "deep learning",
        "artificial intelligence",
]

authors = [
    { name = "Shivani Gowda KS", email = "shivanigowdaks@gmail.com" },
]

maintainers = [
    { name = "Shivani Gowda KS", email = "shivanigowdaks@gmail.com" }
]

[tool.setuptools.packages.find]
include = ["nichirin*"] 

[project.scripts]
pipeline = "nichirin.pipeline:main"
install-solr ="nichirin.scripts.install_solr:main"
index-solr="nichirin.retriever.solr_index_docs:main"
query-solr="nichirin.retriever.solr:main"
create-core="nichirin.scripts.create_core:main"
partition-data="nichirin.scripts.data_partition:main"
seed-urls="nichirin.scripts.seed_urls:main"
start-crawler="nichirin.crawler"
start-serve="nichirin.serve.app"

[tool.setuptools]
include-package-data = true
